[package]
name = "rustcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
time = "0.1.42"
indicatif = "0.15.0"
rayon = "1.10.0"
memmap = "0.7.0"
digest = "0.10.0"
hex-literal = "0.3.1"
ocl = "0.19.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
